Harden in-app travel explorer for supported Android versions